--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mysql2": "^3.10.2",
     "path": "^0.12.7",
     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
